--- a/css/index.css
+++ b/css/index.css
@@ -1,44 +1,46 @@
+@charset "UTF-8";
+
 * {
-	font-family:arial,å¾®è»Ÿæ­£é»‘é«”;
+    font-family: arial,'微軟正黑體';
 }
 
 body {
-	margin:0;
-	min-width: 1180px;
+    margin: 0;
+    min-width: 1180px;
 }
 
 .header {
-	height: 65px;
-	background-color: rgba(75,36,89,0.85);
-	position:fixed;
-	width: 100%;
-	z-index: 1;
+    height: 65px;
+    background-color: rgba(75,36,89,0.85);
+    position: fixed;
+    width: 100%;
+    z-index: 1;
 }
 
 .header>div {
-	width: 910px;
-	height:65px;
-	margin:0 auto;
+    width: 910px;
+    height: 65px;
+    margin: 0 auto;
 }
 
 .header>div>.logo {
-	background-image: url(../images/logo.png);
-	width: 191px;
-	height: 42px;
-	margin-top: 12px;
+    background-image: url(../images/logo.png);
+    width: 191px;
+    height: 42px;
+    margin-top: 12px;
 }
 
 .header>div>.menu {
-	float:right;
-	margin-top: -32px;
-	margin-right: 1px;
-	letter-spacing: 1px;
+    float: right;
+    margin-top: -32px;
+    margin-right: 1px;
+    letter-spacing: 1px;
 }
 
 .header>div>.menu>a {
-	color:white;
-	text-decoration: none;
-	margin-left: 96px;
+    color: white;
+    text-decoration: none;
+    margin-left: 96px;
 }
 
 .content {
@@ -46,12 +48,12 @@ body {
 }
 
 .content>.up {
-	width:100%;
-	position: relative;
+    width: 100%;
+    position: relative;
 }
 
 .content>.up>img {
-	width: 100%;
+    width: 100%;
 }
 
 .content>.up>div {
@@ -61,104 +63,225 @@ body {
 }
 
 .content>.up>div>.label {
-	text-align: center;
+    text-align: center;
 }
 
 .content>.up>div>.label>span {
-	font-size: 38px;
-	font-weight: bold;
-	color: #4b2459;
+    font-size: 38px;
+    font-weight: bold;
+    color: #4b2459;
 }
 
 .content>.up>div>.label>span:first-child {
-	margin-left: -15px;
+    margin-left: -15px;
 }
 
 .content>.up>div>.label>span.spline {
-	margin-left: 7px;
-	margin-right: 10px;
-	color: white;
+    margin-left: 7px;
+    margin-right: 10px;
+    color: white;
+    font-weight: 100;
 }
 
 .content>.up>div>.text {
-	font-size: 18px;
-	font-weight: bold;
-	margin-top: 20px;
-	width: 400px;
-	line-height: 43px;
-	letter-spacing: 0.01em;
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 20px;
+    width: 400px;
+    line-height: 43px;
+    letter-spacing: 0.01em;
 }
 
 .content>.up>div>.button {
-	margin-top: 39px;
-	margin-left: -2px;
-	width: 408px;
-} 
-
-.content>.up>div>.button>a:first-child {
-	margin-right: 43px;
+    
+    margin-top: 39px;
+    
+    margin-left: -2px;
+    
+    width: 408px;
 }
 
+.content>.up>div>.button>a:first-child {
+    
+    margin-right: 43px;
+}
+
+
+
 .tip {
-	margin:74px 0;
-	text-align: center;
+    margin: 74px 0;
+    text-align: center;
 }
 
 .tips1,.tips2 {
-	margin-right: 80px;
+    margin-right: 80px;
 }
 
 .tips1,.tips2,.tips3 {
-	width: 273px;
-	height: 273px;
+    width: 273px;
+    height: 273px;
 
 }
 
 .content>.down {
-	width:100%;
-	position: relative;
+    width: 100%;
+    position: relative;
 }
 
 .content>.down>img {
-	width: 100%;
+    width: 100%;
 }
 
 .content>.down>div {
     position: absolute;
     top: 0;
+    width: 100%;
 }
 
+.content>.down>div>.label {
+    font-size: 34px;
+    color: #eac358;
+    text-align: center;
+    letter-spacing: 1px;
+    margin-top: 60px;
+    width: 100%;
+}
+
+.content>.down>div>.text {
+    
+    font-size: 18px;
+    
+    width: 801px;
+    
+    margin: 0 auto;
+    
+    color: white;
+    
+    margin-top: 16px;
+    
+    line-height: 43px;
+    
+    letter-spacing: 1px;
+}
+
+
 .features {
-	height: 375px;
+    height: 375px;
+    margin-top: -21px;
+    position: relative;
+}
+
+.features>.label {
+    
+    width: 100%;
+    
+    text-align: center;
+    
+    font-size: 26px;
+    
+    color: #4b2459;
+    
+    font-weight: bold;
+    
+    margin-top: 72px;
+    
+    position: absolute;
+}
+
+.features>.text {
+    position: relative;
+    margin: 0 auto;
+    width: 1049px;
+    top: 133px;
+    overflow: hidden;
+}
+
+.features>.text>.icon {
+    float: left;
+    margin-right: 26px;
+    margin-bottom: 22px;
+}
+
+.features>.text>.icon:nth-child(3n+1) {
+    width: 331px;
+    margin-left: 25px;
+}
+
+.features>.text>.icon:nth-child(3n+2) {
+    
+    width: 323px;
+    
+    margin-left: 38px;
+}
+
+.features>.text>.icon:nth-child(3n+3) {
+    
+    width: 270px;
+    
+    margin-right: 0;
+    
+    margin-left: 10px;
+}
+
+.features>.text>.icon>span {
+    
+    font-size: 18px;
+    position: relative;
+    margin-top: -33px;
+    display: block;
+    margin-left: 59px;
+    letter-spacing: 1px;
 }
 
 
 .prime {
-	text-align: center;
+    text-align: center;
+    height: 230px;
 }
 
 .prime1,.prime2 {
-	margin-right: 30px;
+    margin-right: 30px;
 }
 
 .prime1,.prime2,.prime3 {
-	width: 320px;
-	height: 230px;
+    width: 320px;
+    height: 230px;
 
 }
 
 .primetext {
-	height: 255px;
+    height: 255px;
+    text-align: center;
 }
 
+.primetext>div {
+	/* background-color: pink; */
+	width: 320px;
+	height: 255px;
+	margin-right: 30px;
+	display: inline-block;
+}
+
+.primetext>div:last-child {
+    margin-right: 0;
+}
+
+.primetext>div>.label {
+
+font-size: 24px;text-align: left;margin-top: 31px;/* margin-left: 14px; */letter-spacing: 1px;font-weight: bold;color: #4b2459;}
+
+.primetext>div>.text {
+
+margin-top: 18px;line-height: 32px;text-align: left;letter-spacing: 2px;position: absolute;width: 320px;}
+
 .footer {
-	width:100%;
-	position: relative;
+    width: 100%;
+    position: relative;
 }
 
 .footer>img {
-	width: 100%;
-	vertical-align: bottom;
+    width: 100%;
+    vertical-align: bottom;
 }
 
 .footer>div {
