--- a/css/index.css
+++ b/css/index.css
@@ -115,7 +115,7 @@ body {
 .content>.up>div>.button>a {
     width: 180px;
     height: 43px;
-    display: block;
+    display: inline;
 }
 
 .content>.up>div>.button>a:first-child {
