--- a/css/index.css
+++ b/css/index.css
@@ -29,6 +29,12 @@ body {
     margin-top: 12px;
 }
 
+.header>div>.logo>a {
+    width:100%;
+    height:100%;
+    display:block;
+}
+
 .header>div>.menu {
     float: right;
     margin-top: -32px;
